@@ -1,3 +1,8 @@
+2003-09-01  Heikki Junes  <hjunes@cc.hut.fi>
+
+	* buildscripts/lilypond.words.py: add file. Creates lilypond.words
+	from source files and search patterns listed in the script.
+
 2003-08-31  Heikki Junes  <hjunes@cc.hut.fi>
 
 	* lily/parser.yy, lily/my-lily-lexer.cc: spell it acciaccatura.
